# EpubReader

./: .gitignore  LICENSE  README.md  biome.json  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/contracts/: epub-cfi-reader-contract.md
docs/plans/: 2026-05-11-epub-reader-hardening-plan.md  epub-cfi-progress.md
docs/specs/: 2026-05-04-epub-reader-specs.md  2026-05-11-epub-reader-hardening-spec.md
docs/superpowers/plans/: 2026-05-13-epub-reader-final-hardening.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: annotations.rs  books.rs  collections.rs  import.rs  mod.rs  reader.rs  settings.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/db/repositories/: annotations.rs  books.rs  collections.rs  mod.rs  progress.rs  settings.rs
src-tauri/src/epub/: manifest.rs  mod.rs  parser.rs  resources.rs  sanitizer.rs  search_index.rs  text.rs  validation.rs
src-tauri/src/storage/: files.rs  mod.rs  paths.rs  staging.rs
src/features/annotations/: AnnotationPopup.tsx  HighlightLayer.tsx
src/features/reader/: LocatorEngine.ts  PaginationEngine.ts  ReaderControls.tsx  ReaderFrame.tsx  ReaderPage.tsx  ReaderPanels.tsx  ReaderViewport.tsx  ReadingSettingsPopover.tsx  ThemeEngine.ts  TocPopover.tsx  epubCfiReader.test.ts  epubCfiReader.ts  readerDocument.test.ts  readerDocument.ts  readerPosition.ts  (+6 more)
(+8 files in other folders)
