[package]
name = "epub-reader"
version = "0.1.0"
description = "Local desktop EPUB reader."
authors = ["Reading System"]
license = "MIT"
edition = "2021"

[package.metadata]

[lib]
name = "epub_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
roxmltree = "0.20"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
